Atualizacoes botoes e tela de mensalidade

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/LoginIndex.html
@@ -24,7 +24,7 @@
 				<div class="div_LabelCenter">
 					<input wicket:id="btnEnviar" class="botao" type="submit"
 						name="avancar" value="Entrar" /> <input wicket:id="btnLimpar"
-						class="botao" type="submit" name=Limpar value="Limpar" />
+						 type="submit" name=Limpar value="Limpar" />
 				</div>
 			</fieldset>
 		</form>
