--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
@@ -27,7 +27,7 @@
 					</label>
 					<br />
 					<div class="grid_5">
-						<select wicket:id="comboEquipamento" class="campoSelect" id="permissao" style="width: 150px" value="selecione">
+						<select wicket:id="comboEquipamento" style="width: 150px" >
 						</select>
 						<input style="float: Right" wicket:id="btnEditarEquipamento" class="botao" type="submit" name="editarEquipamento" value="Editar" />
 					</div>
@@ -61,7 +61,7 @@
 					</label>
 					<br />
 					<div class="grid_5">
-						<select wicket:id="comboCorpo" class="campoSelect" id="permissao" style="width: 150px" value="selecione">
+						<select wicket:id="comboCorpo" style="width: 150px" >
 						</select>
 						<input style="float: Right" wicket:id="btnEditarMembro" class="botao" type="submit" name="EditarMembro" value="Editar" />
 					</div>
