--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -35,13 +35,13 @@
 						<a style="cursor: default" id="Menu1Link" class="menuRedendoLeft" href="#">Cadastro </a>
 						<ul id="subnav-1" class="ultimoLinkBottomLeft">
 							<li>
-								<a wicket:id="consultarProduto" href="#">Cadastro Produtos</a>
+								<a wicket:id="consultarProduto" href="#">Manter Produto</a>
 							</li>
 							<li>
-								<a wicket:id="consultarCliente" href="#">Cadastro Cliente</a>
+								<a wicket:id="consultarCliente" href="#">Manter Cliente</a>
 							</li>
 							<li>
-								<a wicket:id="consultarExercicio"  href="#">Cadastro Atividade</a>
+								<a wicket:id="consultarExercicio"  href="#">Manter Atividade</a>
 							</li>
 						</ul>
 					</li>
