--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -64,7 +64,7 @@
 								<a wicket:id="pagamentoMenslidade" href="#">Pagamento</a>
 							</li>
 							<li>
-								<a id="SubMenu6Link" href="#">Relatorio de Pagamento</a>
+								<a wicket:id="relatorioMensalidade" href="#">Relatorio de Pagamento</a>
 							</li>
 						</ul>
 					</li>
