--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mensalidade/pagamento/PagamentoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mensalidade/pagamento/PagamentoIndex.html
@@ -87,7 +87,7 @@
 
 				<div class="clear"></div>
 				<div class="grid_5">
-					<input wicket:id="btnSalvar" class="botao" type="submit" name="Finalizar" value="Finalizar Compra" />
+					<input wicket:id="btnSalvar" class="botao" type="submit" name="Finalizar" value="Finalizar Pagamento" />
 					<input wicket:id="btnVoltar" class="botao" type="submit" name="Voltar" value="Voltar" />
 				</div>
 			</fieldset>
