--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/efetuarVenda/EfetuarVendaIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/efetuarVenda/EfetuarVendaIndex.html
@@ -30,10 +30,10 @@
 					</div>
 				</fieldset>
 				<fieldset>
-					<legend class="legenda" align="left">Lista de Compras</legend>
+					<legend class="legenda" align="left">Lista de Items</legend>
 					<div class="dataTables_wrapper">
 						<table class="display  dataTable" style="width: 100%; border: 1px;" wicket:id="tableProdutoVenda"></table>
-						<div class="msgERROR" wicket:id="containerVazioRLProdutoVenda">Lista de compras esta Vazia!</div>
+						<div class="msgERROR" wicket:id="containerVazioRLProdutoVenda">Lista de Items esta Vazia!</div>
 					</div>
 				</fieldset>
 			</fieldset>
