--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
@@ -11,8 +11,8 @@
 				<div class="ui-content">
 					<label wicket:id="lbnNomeExercicio" for="name"></label>
 				</div>
-				<div class="ui-content backGroundExecutar" align="center">
-					<ul class="bxslider">
+				<div class="ui-content backGroundExecutar" style="padding-left: 0px;padding-right: 0px;">
+					<ul class="bxslider" >
 						<li style="margin: auto">
 							<img wicket:id="image1" />
 						</li>
