--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/fecharVenda/FechaVendaIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/fecharVenda/FechaVendaIndex.html
@@ -75,7 +75,7 @@
 				</div>
 				<div style="float: right;">
 					<div class="LabelInputNome grid_1_2" style="margin-right: 0px;">
-						<label> Valor Total: R$: </label>
+						<label> Valor Total: </label>
 					</div>
 					<div class="LabelInputNome grid_4" style="margin-left: 5px;">
 						<label wicket:id="valorTotal" class="LabelInputNome"></label>
