Atualizado Relatorio de venda produto

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -53,7 +53,7 @@
 								<a wicket:id="efetuarVenda" href="#">Efetuar Venda</a>
 							</li>
 							<li>
-								<a id="SubMenu6Link" href="#">Relatorio de Vendas</a>
+								<a wicket:id="relatorioVenda" href="#">Relatorio de Venda</a>
 							</li>
 						</ul>
 					</li>
