--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/cliente/consultar/ConsultarClienteIndex.html
@@ -4,7 +4,7 @@
 			<div wicket:id="modal"></div>
 			<div>
 				<fieldset>
-					<legend class="legenda" align="left">Consultar Clientes</legend>
+					<legend class="legenda" align="left">Consultar Cliente</legend>
 					<div class="dataTables_wrapper" style="left: 35px; width: 500px;">
 						<div class="LabelInputNome grid_3">
 							<label> Codigo:</label>
