--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/produto/consultar/ConsultarProdutoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/produto/consultar/ConsultarProdutoIndex.html
@@ -3,7 +3,7 @@
 		<div class="div_center">
 			<div wicket:id="modal"></div>
 			<fieldset>
-				<legend class="legenda" align="left">Consultar Produtos</legend>
+				<legend class="legenda" align="left">Consultar Produto</legend>
 				<div class="dataTables_wrapper" style="left: 35px; width: 500px;">
 					<div class="LabelInputNome grid_3">
 						<label> Codigo:</label>
