--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
@@ -1,6 +1,6 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
-		<div data-role="header">
+		<div data-role="header" style="margin-bottom: 5px" data-position="fixed">
 			<a href="" class="botaoMenu" wicket:id="btnVoltar" data-icon="arrow-l"></a>
 			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
 			<a href="" data-icon="check" class="botaoMenu" data-theme="ui-icon"></a>
