--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
@@ -1,6 +1,6 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
-		<div data-role="header" style="margin-bottom: 10px">
+		<div data-role="header" style="margin-bottom: 5px" data-position="fixed">
 			<a href="" wicket:id="btnVoltar" class="botaoMenu" data-icon="arrow-l"></a>
 			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
 			<a href="" wicket:id="btnExecutar" data-icon="plus" class="botaoMenu"> </a>
@@ -16,7 +16,7 @@
 						<li style="margin: auto">
 							<img wicket:id="image1" />
 						</li>
-						<li>
+						<li style="margin: auto">
 							<img wicket:id="image2" />
 						</li>
 					</ul>
