Atualização de defeitos

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomPagingNavigator.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/componentes/gridGenerica/CustomPagingNavigator.html
@@ -10,8 +10,8 @@
 				</a>
 			</span>
 		
-			 <a wicket:id="next" class="next">Proximo</a> 
-			 <a wicket:id="last" class="last">Ultimo</a>
+			 <a wicket:id="next" class="next">Próximo</a> 
+			 <a wicket:id="last" class="last">Último</a>
 		</div>
 	</div>
 </wicket:panel>
