--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -32,7 +32,7 @@
 			<div class="div_tam">
 				<ul id="menu" class="Menu">
 					<li id="nav-1" style="z-index: 1">
-						<a style="cursor: default" id="Menu1Link" class="menuRedendoLeft" href="#">Cadastro </a>
+						<a style="cursor: default;" id="Menu1Link" class="menuRedendoLeft botoes" href="#" >Cadastro </a>
 						<ul id="subnav-1" class="ultimoLinkBottomLeft">
 							<li>
 								<a wicket:id="consultarProduto" href="#">Manter Produto</a>
