--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/exercicio/cadastrar/CadastrarAlterarExercicioIndex.html
@@ -90,7 +90,7 @@
 				<div class="radioEquipamento grid_9" style="float: left">
 					<span wicket:id="radioEquipamento">
 						<input wicket:id="alterarEquipamento" type="radio" id="radio1" name="radioEquipamento">
-						<label for="radio1">Altear</label>
+						<label for="radio1">Alterar</label>
 						<input wicket:id="excluirEquipamento" type="radio" id="radio2" name="radioEquipamento">
 						<label for="radio2">Excluir</label>
 						<input wicket:id="novoEquipamento" type="radio" id="radio3" name="radioEquipamento">
