--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/relatorio/mensalidade/RelatorioMensalidadeIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/relatorio/mensalidade/RelatorioMensalidadeIndex.html
@@ -3,14 +3,14 @@
 		<div class="div_center">
 			<div wicket:id="modal"></div>
 			<fieldset>
-				<legend class="legenda" align="left">Relatorio de Mensalidade</legend>
+				<legend class="legenda" align="left">Relatório de Mensalidade</legend>
 				<div class="dataTables_wrapper" style="left: 35px">
 					<div class="LabelInputNome grid_6">
 						<label> Nome Cliente:</label>
 						<input wicket:id="nomePessoa" type="text" maxlength="100" class="campoText" />
 					</div>
 					<div class="LabelInputNome grid_3">
-						<label> Data Inicio:</label>
+						<label> Data início:</label>
 						<input wicket:id="dataInicio" type="text" class="campoText" />
 					</div>
 					<div class="LabelInputNome grid_3">
