--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -53,7 +53,7 @@
 								<a wicket:id="efetuarVenda" href="#">Efetuar Venda</a>
 							</li>
 							<li>
-								<a wicket:id="relatorioVenda" href="#">Relatorio de Venda</a>
+								<a wicket:id="relatorioVenda" href="#">Relatório de Venda</a>
 							</li>
 						</ul>
 					</li>
@@ -64,7 +64,7 @@
 								<a wicket:id="pagamentoMenslidade" href="#">Pagamento</a>
 							</li>
 							<li>
-								<a wicket:id="relatorioMensalidade" href="#">Relatorio de Pagamento</a>
+								<a wicket:id="relatorioMensalidade" href="#">Relatório de Pagamento</a>
 							</li>
 						</ul>
 					</li>
