--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
@@ -1,9 +1,8 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div data-role="header" style="margin-bottom: 5px" data-position="fixed">
-			<a href="" class="botaoMenu" wicket:id="btnVoltar" data-icon="arrow-l"></a>
+			<a href="" wicket:id="btnVoltar" class="ui-btn ui-icon-back ui-btn-icon-left ui-shadow ui-corner-all ui-btn-inline ui-mini botaoMenu"></a>
 			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
-			<a href="" data-icon="check" class="botaoMenu" data-theme="ui-icon"></a>
 		</div>
 		<div class="clear"></div>
 		<div style="margin-left: 10px; margin-right: 10px">
