--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
@@ -1,9 +1,18 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div data-role="header" style="margin-bottom: 5px" data-position="fixed">
-			<a href="" wicket:id="btnVoltar" class="botaoMenu" data-icon="arrow-l"></a>
-			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
-			<a href="" wicket:id="btnExecutar" data-icon="plus" class="botaoMenu"> </a>
+			<div style="float:left;margin-left: 10px">
+				<a href="" wicket:id="btnVoltar" class="ui-btn ui-icon-back ui-btn-icon-left ui-shadow ui-corner-all ui-btn-inline ui-mini botaoMenu"></a>
+			</div>
+			<div style="float:left;">
+				<a href="" wicket:id="btnExecutar"
+					class="botaoMenu ui-btn ui-icon-action ui-btn-icon-left ui-shadow ui-corner-all ui-btn-inline ui-mini"
+				></a>
+			</div>
+			<h1>
+				<label wicket:id="lbnDataSelecionada"></label>
+			</h1>
+
 		</div>
 		<div class="clear"></div>
 		<div style="margin-left: 10px; margin-right: 10px">
@@ -11,8 +20,8 @@
 				<div class="ui-content">
 					<label wicket:id="lbnNomeExercicio" for="name"></label>
 				</div>
-				<div class="ui-content backGroundExecutar" style="padding-left: 0px;padding-right: 0px;">
-					<ul class="bxslider" >
+				<div class="ui-content backGroundExecutar" style="padding-left: 0px; padding-right: 0px;">
+					<ul class="bxslider">
 						<li style="margin: auto">
 							<img wicket:id="image1" />
 						</li>
