--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
@@ -6,8 +6,7 @@
 		</div>
 		<div style="margin: auto;">
 		<div class="clear"></div>
-			<div data-form="ui-body-a" style="border-left-width: 1px; margin-left: 10px; margin-right: 10px; margin-top: 10px;"
-				class="ui-body ui-body-a ui-corner-all"
+			<div data-form="ui-body-a" class="margensModalBranca ui-body ui-body-a ui-corner-all"
 			>
 				<div class="ui-content">
 					<label for="basic">
