--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
@@ -5,7 +5,7 @@
 			<h1><label wicket:id="lbnDataSelecionada"></label></h1>
 		</div>
 		<div class="clear"></div>
-		<div style="margin-left: 10px; margin-right: 10px">
+		<div class="margensModalBranca">
 			<ul data-role="listview" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" data-autodividers="true" data-filter="true"
 				data-inset="true"
 			>
