--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
@@ -15,7 +15,7 @@
 
 		</div>
 		<div class="clear"></div>
-		<div style="margin-left: 10px; margin-right: 10px">
+		<div class="margensModalBranca">
 			<div class="ui-body ui-body-a ui-corner-all">
 				<div class="ui-content">
 					<label wicket:id="lbnNomeExercicio" for="name"></label>
