--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/login/basePage/BasePage.html
@@ -8,70 +8,45 @@
 <body class="dark" onload="atualizarRelogio(); addScriptCss()">
 	<div class="barratop borderVermelha">
 		<div class="div_tam"></div>
-	</div>
+</div>
 	<div class="Layout_Fundo">
 
-		<div class="fundoTopo ">
-			<a  href="osiris-web/logout" wicket:id="sair"> Sair</a>
-			<a  href="osiris-web/logout" wicket:id="mobile"> Mobile</a>
+		<div class="fundoTopo "><a href="osiris-web/logout" wicket:id="sair"> Sair</a> <a href="osiris-web/logout" wicket:id="mobile">
+				Mobile</a>
 			<div class="div_tam" style="height: 118px;">
 				<h2 class="loganGrand">Grande Via Fitness</h2>
 
-			</div>
-
-		</div>
-	</div>
+		</div></div>
+</div>
 
 	<div class="divBranca borderVermelha">
-		<div wicket:id="containerUsuario" class="divUsuarioLogado">
-			Usuario:
-			<span wicket:id="nomeUsuario"></span>
-		</div>
-		<span id="SpanHorarioData" class="SpanHorarioData"> </span>
+		<div wicket:id="containerUsuario" class="divUsuarioLogado">Usuario: <span wicket:id="nomeUsuario"></span>
+	</div> <span id="SpanHorarioData" class="SpanHorarioData"> </span>
 		<div wicket:id="containerMenu">
 			<div class="div_tam">
 				<ul id="menu" class="Menu">
-					<li id="nav-1" style="z-index: 1">
-						<a style="cursor: default;" id="Menu1Link" class="menuRedendoLeft botoes" href="#" >Cadastro </a>
+					<li id="nav-1" style="z-index: 1"><a style="cursor: default;" id="Menu1Link" class="menuRedendoLeft botoes" href="#">Cadastro
+					</a>
 						<ul id="subnav-1" class="ultimoLinkBottomLeft">
-							<li>
-								<a wicket:id="consultarProduto" href="#">Manter Produto</a>
-							</li>
-							<li>
-								<a wicket:id="consultarCliente" href="#">Manter Cliente</a>
-							</li>
-							<li>
-								<a wicket:id="consultarExercicio"  href="#">Manter Atividade</a>
-							</li>
-						</ul>
-					</li>
+							<li><a wicket:id="consultarProduto" href="#">Manter Produto</a></li>
+							<li><a wicket:id="consultarCliente" href="#">Manter Cliente</a></li>
+							<li><a wicket:id="consultarExercicio" href="#">Manter Atividade</a></li>
+						</ul></li>
 
-					<li id="nav-2" style="z-index: 1">
-						<a  style="cursor: default" id="Menu2Link" href="#">Vendas </a>
+					<li id="nav-2" style="z-index: 1"><a style="cursor: default" id="Menu2Link" href="#">Vendas </a>
 						<ul id="subnav-3" class="ultimoLinkBottomLeft">
-							<li>
-								<a wicket:id="efetuarVenda" href="#">Efetuar Venda</a>
-							</li>
-							<li>
-								<a wicket:id="relatorioVenda" href="#">Relatório de Venda</a>
-							</li>
-						</ul>
-					</li>
-					<li id="nav-3" style="z-index: 1">
-						<a style="cursor: default" id="Menu2Link" class="menuRedendoRight" href="#">Mensalidade </a>
+							<li><a wicket:id="efetuarVenda" href="#">Efetuar Venda</a></li>
+							<li><a wicket:id="relatorioVenda" href="#">Relatório de Venda</a></li>
+						</ul></li>
+					<li id="nav-3" style="z-index: 1"><a style="cursor: default" id="Menu2Link" class="menuRedendoRight" href="#">Mensalidade </a>
 						<ul id="subnav-3" class="ultimoLinkBottomright">
-							<li>
-								<a wicket:id="pagamentoMenslidade" href="#">Pagamento</a>
-							</li>
-							<li>
-								<a wicket:id="relatorioMensalidade" href="#">Relatório de Pagamento</a>
-							</li>
-						</ul>
-					</li>
+							<li><a wicket:id="pagamentoMenslidade" href="#">Pagamento</a></li>
+							<li><a wicket:id="relatorioMensalidade" href="#">Relatório de Pagamento</a></li>
+						</ul></li>
 				</ul>
-			</div>
 		</div>
 	</div>
+</div>
 	<div class="clear"></div>
 	<!-- <div id="containerMenu">
 		<div class="div_tam" style="margin-top: 10px">
@@ -80,9 +55,7 @@
 			</div>
 		</div>
 	</div> -->
-	<div class="minmuHeight">
-		<wicket:child />
-	</div>
+	<div class="minmuHeight"><wicket:child /></div>
 	<div class="clear"></div>
 	<div class="divBrancaBotton borderVermelha"></div>
 	<div class="Layout_FundoBotton">
@@ -90,16 +63,11 @@
 			<div class="div_tam" style="height: 118px;">
 				<div class="boxBottomRight">Todos os direitos reservados - © 2014</div>
 				<div class="boxBottomLeft">
-					<p>
-						Grande Via Fitness
-						<br>
-						Desenvolvimento: Alan Fagner Gonçalves
-						<br>
-						Telefone: (16) 997578380
-					</p>
-				</div>
+					<p>Grande Via Fitness <br> Desenvolvimento: Alan Fagner Gonçalves <br> Telefone: (16) 997578380
+				</p>
 			</div>
 		</div>
 	</div>
+</div>
 </body>
 </html>
