Atualizado Mobile e pagina de detalhar produto

--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mensalidade/pagamento/PagamentoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mensalidade/pagamento/PagamentoIndex.html
@@ -1,8 +1,8 @@
 <wicket:extend xmlns:wicket="http://wicket.apache.org">
 	<form wicket:id="formulario">
 		<div class="div_center">
-			<fieldset style="border: none;">
-				<legend class="legenda" align="left"></legend>
+			<fieldset class="fieldset">
+				<legend class="legenda" style="margin-left: 15px" align="left">Pagamento</legend>
 				<div wicket:id="containerGridDados">
 					<fieldset>
 						<legend class="legenda" align="left">Dados do Cliente</legend>
