--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/ExecutaExercicio/MobileExecutarExercicioIndex.html
@@ -69,7 +69,7 @@
 			</div>
 		</div>
 		<div class="clear"></div>
-		<div wicket:id="feedback"></div>
+		<div wicket:id="feedback" role="dialog"></div>
 		<div data-role="footer" data-position="fixed">
 			<h1>
 				<label wicket:id="lbnLogado"></label>
