--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/fecharVenda/FechaVendaIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/venda/fecharVenda/FechaVendaIndex.html
@@ -78,7 +78,7 @@
 						<label> Valor Total: </label>
 					</div>
 					<div class="LabelInputNome grid_4" style="margin-left: 5px;">
-						<label wicket:id="valorTotal" class="LabelInputNome"></label>
+						<label wicket:id="valorTotal" style="font-weight: bold;" class="LabelInputNome"></label>
 					</div>
 				</div>
 				<div class="clear"></div>
