--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MobileDetalharExercicio/MobileDetalharExercicioIndex.html
@@ -15,7 +15,7 @@
 
 		</div>
 		<div class="clear"></div>
-		<div wicket:id="feedback" role="dialog"></div>
+		<div wicket:id="feedback" class="mensagem" ></div>
 		<div class="clear"></div>
 		<div class="margensModalBranca">
 			<div class="ui-body ui-body-a ui-corner-all">
