--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/MembroCorpo/MobileMembroCorpoIndex.html
@@ -6,9 +6,7 @@
 		</div>
 		<div class="clear"></div>
 		<div class="margensModalBranca">
-			<ul data-role="listview" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" data-autodividers="true" data-filter="true"
-				data-inset="true"
-			>
+			<ul data-role="listview" class="ui-listview ui-listview-inset ui-corner-all ui-shadow" data-filter="true" data-inset="true">
 				<li wicket:id="listItems">
 					<a wicket:id="Link">
 						<label wicket:id="lbnNome" class="lbnLink"></label>
