--- a/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/TipoExercicio/MobileTipoExercicoIndex.html
+++ b/GrandeViaFitness/src/main/java/com/br/GrandeViaFitness/pages/visao/mobile/TipoExercicio/MobileTipoExercicoIndex.html
@@ -6,7 +6,7 @@
 		</div>
 		<div class="clear"></div>
 		<div class="margensModalBranca">
-			<ul data-role="listview" data-autodividers="true" data-filter="true" data-inset="true">
+			<ul data-role="listview" data-filter="true" data-inset="true">
 				<li wicket:id="listItems">
 					<a wicket:id="Link">
 						<label wicket:id="lbnNome" class="lbnLink"></label>
